optimización de dialog y editar fixed